--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@ img {
 /*________________________________________________________*/
 .container {
   width: 1158px;
+  margin: 0;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
