--- a/css/styles.css
+++ b/css/styles.css
@@ -226,6 +226,7 @@ body {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--dark-color);
+  margin-bottom: 8px; 
 }
 
 .title-text {
@@ -371,4 +372,28 @@ body {
 .menu {
   display: flex;
   align-items: center;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.list-past {
+  display: flex; 
+  gap: 24px; 
+
+}
+.list-past-content {
+  width: calc((100% - 72px) / 4);
+
 }
