--- a/css/styles.css
+++ b/css/styles.css
@@ -217,6 +217,8 @@ body {
   letter-spacing: 0.02em;
   text-align: center;
   color: var(--dark-color);
+  margin-bottom: 72px;
+
 }
 
 .title-text-on {
@@ -291,6 +293,8 @@ body {
 
 .section-what {
   background-color: var(--light-mode-color);
+  padding-bottom: 120px;
+
 }
 
 .section-team {
@@ -395,5 +399,14 @@ body {
 }
 .list-past-content {
   width: calc((100% - 72px) / 4);
+}
 
+.list-content {
+  padding: 120px 0;
+}
+
+.list-back {
+  display: flex; 
+  gap: 24px;
+  width: calc((100% - 48px) / 3);
 }
