--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ ul, ol {
   margin: 0;
   padding: 0;
 }
+ul {padding-left: 0;}
 a {
   text-decoration: none;
   color: currentColor;
@@ -32,8 +33,6 @@ img {
 .container {
   width: 1158px;
   margin: 0 auto;
-  margin-left: auto;
-  margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
 }
@@ -183,8 +182,6 @@ body {
   color: var(--dark-color);
   display: flex;
   gap: 40px;
-  padding-top: 24px;
-  padding-bottom: 24px;
 }
 
 .hero-menu:focus {
@@ -217,7 +214,6 @@ body {
   text-transform: capitalize;
   letter-spacing: 0.02em;
   text-align: center;
-  color: var(--dark-color);
   margin-bottom: 72px;
 }
 
@@ -228,7 +224,7 @@ body {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--dark-color);
-  margin-bottom: 8px; 
+  margin-bottom: 8px 
 }
 
 .title-text {
@@ -378,7 +374,6 @@ body {
 
 .heder-past {
   display: flex; 
-  margin: 0;
   padding: 0 15px;
 }
 
@@ -394,7 +389,6 @@ body {
   margin: -1px;
   border: 0;
   padding: 0;
-  
   white-space: nowrap;
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
@@ -458,15 +452,19 @@ body {
   flex-wrap: wrap; 
   column-gap: 24px;
   row-gap: 48px; 
+  padding-left: 0;
 }
 
 .portfolio-content-spase {
   width: calc((100% - 48px) / 3);
 }
 
-.portfolio-title {
+.content-title {
   padding: 32px 16px;
-  border: 1px solid #e7e9fc;
+  border: 1px solid #e7e9fc; 
   border-top: none; 
-
+}
+.hero-menu-studio {
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
