--- a/css/styles.css
+++ b/css/styles.css
@@ -370,6 +370,7 @@ body {
 
 .portfolio-border {
   border: 1px solid #E7E9FC;
+  width: calc((100% - 48px) / 3);
 }
 
 .heder-studio {
@@ -449,6 +450,10 @@ body {
   justify-content: center; 
   gap: 24px;
   margin-bottom: 72px;
+}
+
+.portfolio-title {
+
 }
 
 .portfolio-content {
