--- a/css/styles.css
+++ b/css/styles.css
@@ -457,14 +457,14 @@ body {
 
 }
 
-
-.portfolio-content-spase {
-  width: calc((100% - 48px) / 3);
+.portfolio-content{
   display: flex;
   flex-wrap: wrap; 
   column-gap: 24px;
   row-gap: 48px; 
-  padding-left: 0;
+}
+.portfolio-content-spase {
+  width: calc((100% - 48px) / 3);
 }
 
 .content-title {
