--- a/css/styles.css
+++ b/css/styles.css
@@ -371,7 +371,6 @@ body {
 
 .portfolio-border {
   border: 1px solid #E7E9FC;
-  width: calc((100% - 48px) / 3);
 }
 
 .heder-studio {
@@ -386,6 +385,11 @@ body {
 .menu {
   display: flex;
   align-items: center;
+}
+
+.menu-past {
+  gap: 40px;
+  display: flex;
 }
 
 .visually-hidden {
