--- a/css/styles.css
+++ b/css/styles.css
@@ -8,16 +8,15 @@ h2,
 h3,
 h4,
 h5,
-h6,
 p {
-  margin: 0;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
-ul, ol {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+ul,
+ol {
+    margin: 0px;
+    padding-left: 0px;
 }
-ul {padding-left: 0;}
 a {
   text-decoration: none;
   color: currentColor;
