--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,10 @@ body {
 
 }
 
+.meil-tel {
+  color: var(--body-text-color);
+}
+
 .studiologoheader {
   font-style: normal;
   font-weight: 800;
@@ -138,6 +142,8 @@ body {
 .section-hero {
   background: var(--dark-color);
   padding: 188px 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .btn-hero {
@@ -414,7 +420,7 @@ body {
 }
 
 .list-content {
-  padding: 120px 0;
+ 
 }
 
 .list-back {
@@ -436,12 +442,11 @@ body {
 }
 
 .title-text-on {
-  text-align: center; 
   margin-bottom: 8px;
 }
 
 .title-text {
-  text-align: center;
+
 }
 
 .section-portfolio {
