--- a/css/styles.css
+++ b/css/styles.css
@@ -180,6 +180,7 @@ body {
   max-width: 496px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 60px;
 }
 
 .hero-menu {
@@ -234,7 +235,8 @@ body {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--dark-color);
-  margin-bottom: 8px 
+  margin-bottom: 8px;
+  text-align: center;
 }
 
 .title-text {
@@ -244,6 +246,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--body-text-color);
+  text-align: center;
   
 }
 
@@ -255,6 +258,7 @@ body {
   letter-spacing: 0.02em;
   color: var(--dark-color);
   margin-bottom: 8px;
+  text-align: center;
 }
 
 .weblogofooter {
